Fix : frontend and backend of the project